# ChangeLog for x11-wm/ion
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/ion/Attic/ChangeLog,v 1.7 2003/02/12 09:51:56 vapier Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*ion-20020207-r1 (23 Nov 2002)

  23 Nov 2002; Sascha Schwabbauer <cybersystem@gentoo.org> ion-20020207-r1.ebuild :

  Added ~ppc to keywords.

*ion-20020207-r1 (11 Sep 2002)

  11 Sep 2002; Seemant Kulleen <seemant@gentoo.org> ion-20020207-r1.ebuild
  files/ion-20020207-gentoo.diff files/digest-ion-20020207-r1 :

  Patch by: sascha-gentoo-bugzilla@silbe.org (Sascha Silbe) in bug #7783 to
  fix the quote_next() function.

*ion-20020207 (8 Feb 2002)

  8 Feb 2002; Daniel Robbins <drobbins@gentoo.org> Added a new ion ebuild from
  Doug Miller.

*ion-20011109-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.